# finance-assistant-AI

./: .gitignore  Dockerfile  README copy.md  README.md  agent.py  app.py  chunker.py  docker-compose.yml  evaluate.py  ingest.py  main.py  monitor.py  pdf_to_text.py  pyproject.toml  rag.py  render.yaml  requirements.txt  search.py  test_pipeline.py
data/: feedback.jsonl
